--- a/src/app/componentes/create-account/create-account.html
+++ b/src/app/componentes/create-account/create-account.html
@@ -1,20 +1,26 @@
-<form [formGroup]="userForm" (ngSubmit)="onSubmit()">
+<body>
+  <main>
+    <form [formGroup]="userForm" (ngSubmit)="onSubmit()">
+      
+      <h2>Login</h2>
+      <div>
+        <label for="name">Nome:</label>
+        <input id="name" type="text" formControlName="name">
+      </div>
 
-  <div>
-    <label for="name">Nome:</label>
-    <input id="name" type="text" formControlName="name">
-  </div>
+      <div>
+        <label for="email">Email:</label>
+        <input id="email" type="email" formControlName="email">
+      </div>
 
-  <div>
-    <label for="email">Email:</label>
-    <input id="email" type="email" formControlName="email">
-  </div>
+      <div>
+        <label for="password">Senha:</label>
+        <input id="password" type="password" formControlName="password">
+      </div>
 
-  <div>
-    <label for="password">Senha:</label>
-    <input id="password" type="password" formControlName="password">
-  </div>
+      <button type="submit" [disabled]="!userForm.valid">Criar Conta</button>
 
-  <button type="submit" [disabled]="!userForm.valid">Criar Conta</button>
+    </form>
+  </main>
+</body>
 
-</form>
