--- a/src/app/componentes/dashboard/dashboard.html
+++ b/src/app/componentes/dashboard/dashboard.html
@@ -1,1 +1,23 @@
-<h1>Patrimônio total = </h1>
+<app-dealer></app-dealer>
+
+<div>
+    <h1>
+        Total
+    </h1>
+</div>
+<div>
+    <h1>
+        Total investido
+    </h1>
+    <h2>+_%</h2>
+</div>
+<div>
+    <h1>
+        Total
+    </h1>
+</div>
+<div>
+    <h1>
+        Top investimento do dia
+    </h1>
+</div>
