--- a/src/app/componentes/header/header.html
+++ b/src/app/componentes/header/header.html
@@ -1,1 +1,9 @@
-<p>header works!</p>
+<header>
+  <nav> <a>Portifolio</a>
+    <a>Dashbord</a>
+    <a>History</a>
+    <a>News</a>
+    <a>Notes</a>
+  </nav>
+  <app-login></app-login>
+</header>
